feat: 만료된 방 조회 네이티브 쿼리 사용 테스트 수정